--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier --write src/**/*.{js,vue,css,scss,html}"
   },
   "dependencies": {
+    "axios": "^1.7.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
